Fixed: removed word wrap for code block

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,13 +1,24 @@
 @import url('https://unpkg.com/primer/build/build.css');
-@import url('https://fonts.googleapis.com/css?family=Rubik:400,500,700,900');
 
-body {
-  font-family: 'Rubik', sans-serif;
+.blog-markdown__body {
+  p {
+    word-wrap: break-word;
+  }
+
+  blockquote {
+    padding-left: 23px;
+    box-shadow: inset 3px 0 0 0 rgba(41, 41, 41, 1);
+    margin-left: 0px;
+    font-style: italic;
+  }
+
+  li {
+    margin-left: 32px;
+  }
 }
 
-.github-component {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+.text-white blockquote {
+  box-shadow: inset 3px 0 0 0 #ffffff;
 }
 
 .repo-language-color {
@@ -33,4 +44,5 @@ body {
 
 :root {
   --deckgo-highlight-code-scroll: auto;
+  --deckgo-highlight-code-container-width: 100vh;
 }
